--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
     ]
   },
   "dependencies": {
-    "motion": "^10.18.0"
+    "@eslint/config-array": "^0.19.0",
+    "@eslint/object-schema": "^2.1.4",
+    "glob": "^9.3.5",
+    "inflight": "^1.0.6",
+    "motion": "^10.18.0",
+    "rimraf": "^4.4.1"
   }
 }
