--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: chage docker image
         uses: mikefarah/yq@master
         with:
-          cmd: yq '.spec.template.spec.containers[0].image = env(IMAGE)' -i ${{ env.WORK_DIR }}k8s/syncing/citbot.yaml
+          cmd: yq '.spec.template.spec.containers[0].image = env(IMAGE)' -i ${{ env.WORK_DIR }}container/manifest/sync/app.yaml
       # Manifest commit
       - name: commit
         uses: stefanzweifel/git-auto-commit-action@v4
