Ingressのサービス名を'react-svc'から'main-svc'に、'qwik-svc'から'cyber_root_music-svc'に変更

--- a/container/manifest/sync/app-ingress.yaml
+++ b/container/manifest/sync/app-ingress.yaml
@@ -13,13 +13,13 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: react-svc
+            name: main-svc
             port:
               number: 80
       - path: /dj
         pathType: Prefix
         backend:
           service:
-            name: qwik-svc
+            name: cyber_root_music-svc
             port:
               number: 80
