--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@eslint/config-array": "^0.19.0",
     "@eslint/object-schema": "^2.1.4",
     "glob": "^9.3.5",
+    "granim": "^2.0.0",
     "inflight": "^1.0.6",
     "motion": "^10.18.0",
     "rimraf": "^4.4.1"
