--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@builder.io/vite-plugin-macro": "~0.0.7",
     "@pandacss/dev": "^0.36.1",
     "@types/eslint": "8.56.10",
+    "@types/granim": "^2.0.4",
     "@types/node": "20.14.11",
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "@typescript-eslint/parser": "7.16.1",
